@@ -1316,6 +1316,37 @@ END;
 	$dbh->commit () ;
     }
 
+    $version = &get_db_version ;
+    $target = "3.1-0+1" ;
+    if (is_lesser $version, $target) {
+	debug "Upgrading with 20031105.sql" ;
+
+	@reqlist = @{ &parse_sql_file ("/usr/lib/gforge/db/20031105.sql") } ;
+	foreach my $s (@reqlist) {
+	    $query = $s ;
+	    # debug $query ;
+	    $sth = $dbh->prepare ($query) ;
+	    $sth->execute () ;
+	    $sth->finish () ;
+	}
+
+	debug "Upgrading with 20031124.sql" ;
+
+	@reqlist = @{ &parse_sql_file ("/usr/lib/gforge/db/20031124.sql") } ;
+	foreach my $s (@reqlist) {
+	    $query = $s ;
+	    # debug $query ;
+	    $sth = $dbh->prepare ($query) ;
+	    $sth->execute () ;
+	    $sth->finish () ;
+	}
+	@reqlist = () ;
+
+	&update_db_version ($target) ;
+	debug "Committing." ;
+	$dbh->commit () ;
+    }
+
     debug "It seems your database $action went well and smoothly.  That's cool." ;
     debug "Please enjoy using Gforge." ;
 
